sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:20: error: type mismatch;
 found   : Unit
 required: Boolean
  } while (inverse=true)
                  ^